agents + tasks (inside project with crewai create)

--- a/with_crewai_create/src/blog_writing/config/agents.yaml
+++ b/with_crewai_create/src/blog_writing/config/agents.yaml
@@ -9,6 +9,7 @@ blog_researcher:
   allow_delegation: True
   llm: llm
   tools: [yt_tool]
+  verbose: True
 
 blog_writer:
   role: >
@@ -21,3 +22,4 @@ blog_writer:
   allow_delegation: True
   llm: llm
   tools: [yt_tool]
+  verbose: True
